tests/http/snapshots/http__v2_general__docs.snap
---
source: tests/http/v2_general.rs
expression: "get(\"/api/v2/docs\").without_body().send().await"
---
GET /api/v2/docs
status: 308 Permanent Redirect
location: /docs
---
<body omitted>
