tests/http/snapshots/http__v2_general__unknown_route.snap
---
source: tests/http/v2_general.rs
expression: "get(\"/api/v2/nonexistent\").send().await"
---
GET /api/v2/nonexistent
status: 404 Not Found
content-type: application/problem+json
---
{
  "code": "not_found",
  "detail": "no such endpoint",
  "status": 404,
  "title": "The requested data was not found"
}
